--- a/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/cardview_light_background"
+    android:background="@drawable/p5"
     tools:context=".packageThongTinUser.ThayDoiThongTin">
     <ScrollView
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/imgHinhDaiDien2"
+        android:id="@+id/imgHinhDaiDienTT"
         android:layout_width="149dp"
         android:layout_height="147dp"
         android:layout_marginTop="16dp"
@@ -24,20 +24,21 @@
         app:srcCompat="@drawable/admin" />
 
     <Button
-        android:id="@+id/btnDoiAnh"
+        android:id="@+id/btnDoiAnhTT"
         android:layout_width="65dp"
         android:layout_height="51dp"
         android:layout_marginTop="32dp"
         android:text="Đổi"
         android:background="@drawable/custom_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgHinhDaiDien2"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhDaiDienTT"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextHVT"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
@@ -46,12 +47,13 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgHinhDaiDien2" />
+        app:layout_constraintTop_toBottomOf="@+id/imgHinhDaiDienTT" />
 
     <EditText
-        android:id="@+id/editTextSDT"
+        android:id="@+id/editTextSDTTT"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
@@ -76,7 +78,8 @@
     <Spinner
         android:id="@+id/spinnerQuanHuyen"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="@+id/spinnerThanhPho"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,58 +89,63 @@
     <Spinner
         android:id="@+id/spinnerThanhPho"
         android:layout_width="254dp"
-        android:layout_height="46dp"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.796"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDateTT" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="TP/Tỉnh"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/spinnerThanhPho"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:text="TP/Tỉnh"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/spinnerThanhPho"
+                    app:layout_constraintHorizontal_bias="0.666"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/editTextDateTT" />
 
     <Spinner
         android:id="@+id/spinnerXaPhuong"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="@+id/spinnerQuanHuyen"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/spinnerQuanHuyen"
         app:layout_constraintTop_toBottomOf="@+id/spinnerQuanHuyen" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Phường/Xã"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/spinnerXaPhuong"
-        app:layout_constraintHorizontal_bias="0.736"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="48dp"
+                    android:text="Phường/Xã"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/spinnerXaPhuong"
+                    app:layout_constraintHorizontal_bias="0.736"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Quận/Huyện"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/spinnerQuanHuyen"
-        app:layout_constraintHorizontal_bias="0.775"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="34dp"
+                    android:text="Quận/Huyện"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/spinnerQuanHuyen"
+                    app:layout_constraintHorizontal_bias="0.775"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
         android:id="@+id/btnLuu"
@@ -151,9 +159,10 @@
         app:layout_constraintTop_toBottomOf="@+id/spinnerXaPhuong" />
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/editTextDateTT"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:background="@drawable/custom_input"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
@@ -163,7 +172,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextSDT" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSDTTT" />
             </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </LinearLayout>
