--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -137,7 +137,7 @@
                     tools:ignore="OnClick" />
 
                 <TextView
-                    android:id="@+id/txtEmailDangNhap"
+                    android:id="@+id/txtEmailTT"
                     android:layout_width="0dp"
                     android:layout_height="35sp"
                     android:layout_marginStart="16dp"
@@ -149,35 +149,35 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtHoVaTen" />
 
                 <TextView
-                    android:id="@+id/txtSDT"
+                    android:id="@+id/txtSDTTT"
                     android:layout_width="0dp"
                     android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/txtEmailDangNhap"
-                    app:layout_constraintStart_toStartOf="@+id/txtEmailDangNhap"
-                    app:layout_constraintTop_toBottomOf="@+id/txtEmailDangNhap" />
+                    app:layout_constraintEnd_toEndOf="@+id/txtEmailTT"
+                    app:layout_constraintStart_toStartOf="@+id/txtEmailTT"
+                    app:layout_constraintTop_toBottomOf="@+id/txtEmailTT" />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/txtNgaySinhTT"
                     android:layout_width="0dp"
                     android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/txtSDT"
+                    app:layout_constraintEnd_toEndOf="@+id/txtSDTTT"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/txtSDT"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSDT" />
+                    app:layout_constraintStart_toStartOf="@+id/txtSDTTT"
+                    app:layout_constraintTop_toBottomOf="@+id/txtSDTTT" />
 
                 <TextView
-                    android:id="@+id/txtDiaChi"
+                    android:id="@+id/txtDiaChiTT"
                     android:layout_width="0dp"
                     android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/textView10"
-                    app:layout_constraintStart_toStartOf="@+id/textView10"
-                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                    app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhTT"
+                    app:layout_constraintStart_toStartOf="@+id/txtNgaySinhTT"
+                    app:layout_constraintTop_toBottomOf="@+id/txtNgaySinhTT" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
