--- a/app/src/main/res/layout/activity_tab_tai_khoan.xml
+++ b/app/src/main/res/layout/activity_tab_tai_khoan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".packageThongTinUser.TabTaiKhoan">
+    tools:context=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.TabTaiKhoan">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabBar"
