--- a/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/p5"
-    tools:context=".packageThongTinUser.ThayDoiMatKhau">
+    tools:context=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.ThayDoiMatKhau">
 
     <Button
         android:id="@+id/btnLuuTT"
