--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -33,7 +33,7 @@
                     app:srcCompat="@drawable/admin" />
 
                 <TextView
-                    android:id="@+id/txtHoVaTen"
+                    android:id="@+id/txtHoVaTenTT"
                     android:layout_width="215dp"
                     android:layout_height="47dp"
                     android:layout_marginTop="16dp"
@@ -61,7 +61,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.053"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTen" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -146,7 +146,7 @@
                     android:gravity="center_vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTen" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
 
                 <TextView
                     android:id="@+id/txtSDTTT"
