--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:shape="rectangle">
-    <!-- Set màu nền -->
-    <solid android:color="#C60505"></solid>
-    <!-- Đặt thuộc tính màu và độ rộng đường viền
+    <!-- Set màu nền
+    <solid android:color="#C60505"></solid>-->
+    <!-- Đặt thuộc tính màu và độ rộng đường viền-->
     <stroke
-        android:width="1dp"
+        android:width="3dp"
         android:color="#C60505">
-    </stroke>-->
+    </stroke>
     <!--Các thuộc tính căn chỉnh-->
     <!--<padding
         android:left="5dp"
@@ -16,6 +17,6 @@
         android:bottom="5dp">
     </padding>-->
     <!-- Bán kính đường tròn ở 4 góc -->
-    <corners android:radius="20dp"></corners>
+    <corners android:radius="20sp"></corners>
 
 </shape>
