--- a/app/src/main/res/layout/fragment_trangchu_phimdangchieufragment.xml
+++ b/app/src/main/res/layout/fragment_trangchu_phimdangchieufragment.xml
@@ -32,7 +32,7 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/images" />
+                    app:srcCompat="@drawable/yourname" />
 
                 <ImageView
                     android:id="@+id/imageView4"
