--- a/app/src/main/res/layout/activity_tab_tai_khoan.xml
+++ b/app/src/main/res/layout/activity_tab_tai_khoan.xml
@@ -29,7 +29,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/viewPagerTrangChiTiet"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
