--- a/app/src/main/res/layout/fragment_dangnhap.xml
+++ b/app/src/main/res/layout/fragment_dangnhap.xml
@@ -69,9 +69,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="40dp"
-                    android:background="@drawable/custom_button_dk"
+                    android:background="@drawable/custom_button"
 
                     android:text="Đăng ký tài khoản"
+                    android:textColor="@color/white"
                     android:textAllCaps="false"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
