--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -21,86 +21,128 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/imgHinhDaiDienTT1"
+                            android:layout_width="149dp"
+                            android:layout_height="147dp"
+                            android:layout_marginTop="16dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/admin" />
 
-                <ImageView
-                    android:id="@+id/imgHinhDaiDien"
-                    android:layout_width="149dp"
-                    android:layout_height="147dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/admin" />
+                        <TextView
+                            android:id="@+id/txtHoVaTenTT"
+                            android:layout_width="215dp"
+                            android:layout_height="47dp"
+                            android:layout_marginTop="16dp"
+                            android:gravity="center|center_vertical"
+                            android:text="Họ Và Tên"
 
-                <TextView
-                    android:id="@+id/txtHoVaTenTT"
-                    android:layout_width="215dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center|center_vertical"
-                    android:text="Họ Và Tên"
+                            android:textColor="#F44336"
+                            android:textSize="24sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.454"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/imgHinhDaiDienTT1" />
 
-                    android:textColor="#F44336"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.454"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgHinhDaiDien" />
+                        <TextView
+                            android:id="@+id/textView3"
+                            android:layout_width="110dp"
+                            android:layout_height="25dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginBottom="30dp"
+                            android:text="Email"
+                            android:textColor="@color/cardview_dark_background"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toTopOf="@+id/textView4"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.053"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="110dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginBottom="30dp"
-                    android:text="Email"
-                    android:textColor="@color/cardview_dark_background"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView4"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.053"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
+                        <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginTop="30dp"
+                            android:text="Số điện thoại"
+                            android:textColor="@color/cardview_dark_background"
+                            android:textSize="16sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView3"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/textView3"
+                            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="30dp"
-                    android:text="Số điện thoại"
-                    android:textColor="@color/cardview_dark_background"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView3"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/textView3"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginTop="23dp"
+                            android:text="Ngày sinh"
+                            android:textColor="@color/cardview_dark_background"
+                            android:textSize="16sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView4"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/textView4"
+                            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="23dp"
-                    android:text="Ngày sinh"
-                    android:textColor="@color/cardview_dark_background"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView4"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginTop="28dp"
+                            android:text="Địa chỉ"
+                            android:textColor="@color/cardview_dark_background"
+                            android:textSize="16sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView5"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/textView5"
+                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="28dp"
-                    android:text="Địa chỉ"
-                    android:textColor="@color/cardview_dark_background"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView5"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/textView5"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                        <TextView
+                            android:id="@+id/txtEmailTT"
+                            android:layout_width="0dp"
+                            android:layout_height="35sp"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="29dp"
+                            android:layout_marginEnd="16dp"
+                            android:gravity="center_vertical"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/textView3"
+                            app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
+
+                        <TextView
+                            android:id="@+id/txtSDTTT"
+                            android:layout_width="0dp"
+                            android:layout_height="35sp"
+                            android:layout_marginTop="16dp"
+                            android:gravity="center_vertical"
+                            app:layout_constraintEnd_toEndOf="@+id/txtEmailTT"
+                            app:layout_constraintStart_toStartOf="@+id/txtEmailTT"
+                            app:layout_constraintTop_toBottomOf="@+id/txtEmailTT" />
+
+                        <TextView
+                            android:id="@+id/txtNgaySinhTT"
+                            android:layout_width="0dp"
+                            android:layout_height="35sp"
+                            android:layout_marginTop="16dp"
+                            android:gravity="center_vertical"
+                            app:layout_constraintEnd_toEndOf="@+id/txtSDTTT"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/txtSDTTT"
+                            app:layout_constraintTop_toBottomOf="@+id/txtSDTTT" />
+
+                        <TextView
+                            android:id="@+id/txtDiaChiTT"
+                            android:layout_width="0dp"
+                            android:layout_height="35sp"
+                            android:layout_marginTop="16dp"
+                            android:gravity="center_vertical"
+                            app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhTT"
+                            app:layout_constraintStart_toStartOf="@+id/txtNgaySinhTT"
+                            app:layout_constraintTop_toBottomOf="@+id/txtNgaySinhTT" />
 
                 <Button
                     android:id="@+id/btnThayDoiTT"
@@ -109,14 +151,14 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
-
-                    android:text="Thay đổi thông tin"
                     android:background="@drawable/custom_button"
+                    android:text="Thay đổi thông tin"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    app:layout_constraintTop_toBottomOf="@+id/txtDiaChiTT"
                     tools:ignore="OnClick" />
 
                 <Button
@@ -127,59 +169,14 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/custom_button"
-
+                    android:textColor="@color/white"
                     android:text="Thay Đổi Mật Khẩu"
-
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnThayDoiTT"
                     tools:ignore="OnClick" />
-
-                <TextView
-                    android:id="@+id/txtEmailTT"
-                    android:layout_width="0dp"
-                    android:layout_height="35sp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="29dp"
-                    android:layout_marginEnd="16dp"
-                    android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
-
-                <TextView
-                    android:id="@+id/txtSDTTT"
-                    android:layout_width="0dp"
-                    android:layout_height="35sp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/txtEmailTT"
-                    app:layout_constraintStart_toStartOf="@+id/txtEmailTT"
-                    app:layout_constraintTop_toBottomOf="@+id/txtEmailTT" />
-
-                <TextView
-                    android:id="@+id/txtNgaySinhTT"
-                    android:layout_width="0dp"
-                    android:layout_height="35sp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/txtSDTTT"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/txtSDTTT"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSDTTT" />
-
-                <TextView
-                    android:id="@+id/txtDiaChiTT"
-                    android:layout_width="0dp"
-                    android:layout_height="35sp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhTT"
-                    app:layout_constraintStart_toStartOf="@+id/txtNgaySinhTT"
-                    app:layout_constraintTop_toBottomOf="@+id/txtNgaySinhTT" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
